manifests/Ambassador.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-webserver
  labels:
    app: go-webserver
spec:
  selector:
    app: go-webserver
    tier: web
  ports:
  - port: 80
    targetPort: 8080
